[gd_scene load_steps=2 format=3 uid="uid://cu2ep3xdys73o"]

[ext_resource type="Script" uid="uid://cjnlpni0ogxk6" path="res://scripts/pause_menu_manager.gd" id="1_ej2fg"]

[node name="PauseMenu" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -64.0
offset_right = 39.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ej2fg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
